# YOLO_FPN_FPGA_Accelerator_Paper

./: AGENTS.md  README.md
.DeepLearning/: 学习记录表格.xlsx  深度学习_整理版.md  深度学习_第二周_学习进度表.xlsx
.DeepLearning/fish-book-practices-main/fish-book-practices-main/: .gitignore  README.md  pyproject.toml
.DeepLearning/fish-book-practices-main/fish-book-practices-main/example/: sigmoid梯度消失问题.ipynb  simple_cnn_params.pkl  t01.py  t02.py  t03-激活函数实现.py  t04-numpy.py  t05-简单的神经网络实现.py  t06-手写数字数据集.py  t07-加载模型进行手写数字识别.py  t08-损失函数.ipynb  t09-导数与梯度.ipynb  t10-神经网络的梯度.ipynb  t11-基于数值微分的深度学习.ipynb  t12-误差反向传播各个层的实现.ipynb  t13-基于误差反向传播的深度学习.ipynb  t14-参数更新方法(优化器).ipynb  t15-参数初始值设置.ipynb  t16-不同参数初始化设置方法效果对比.ipynb  t16-基于MNIST数据集的权重初始值的比较.ipynb  t17-增加BatchNorm改善学习效率.ipynb  t18-过拟合处理.ipynb  t19-超参的最优化.ipynb  t20-优化后神经网络识别手写数字.ipynb  t21-简单的卷积网络实现.ipynb
.DeepLearning/fish-book-practices-main/fish-book-practices-main/example/dataset/: mnist.py
.DeepLearning/fish-book-practices-main/fish-book-practices-main/libs/: functions.py  layers.py  network.py  optimizer.py  trainer.py  util.py
.study note/: 学习笔记.md  深度学习.md
.学习笔记/: 学习笔记.md  深度学习_排版说明.md
01_论文路线/: 论文写作路线图.md  论文说明.md
07_experiments/: experiment_index.xlsx
08_results/: stage1_Table2_pruning_ablation.md
09_论文图片/: Figure2_FPN_Topology_Before_After.md  Figure2_FPN_Topology_Before_After.mmd
10_论文写作/: Baseline and Pruning Ablation.md  Experimental Setup and Preliminary Verification.md  HLS Implementation and Validation.md  Stage1_Conference_Paper_Draft.md  Stage2 Completion Assessment.md  阶段一实验全流程整理.md
(+2078 files in other folders)
